docs: 全库 8 大模块内容深度丰富（只新增/润色，零删除）
覆盖 DDD / 云原生 / 场景设计 / 基础知识 / 大模型 / 源码系列 / 算法 / 设计模式 共 60+ 篇 markdown；README 索引同步更新待补充标记。所有原有内容原样保留，仅末尾追加与润色。